# Neobox

./: .gitignore  .gitmodules  .nvimlog  .vimspector.json  CMakeLists.txt  CMakeSettings.json  LICENSE  PluginSettings.json  README.html  README.md  Settings.json  Update.json  Update.txt  build.bat  build.sh  change_background.js  hello.cpp  index.html  logo.rc  main.cpp  master.cpp  quick_make.bat  recourses.qrc  xmake.lua
3rdlib/3rd_qxtglobalshortcut/: CMakeLists.txt  qxtglobal.cpp  qxtglobalshortcut.cpp  qxtglobalshortcut_mac.cpp  qxtglobalshortcut_x11.cpp  qxtwindowsystem.cpp  qxtwindowsystem_mac.cpp  qxtwindowsystem_x11.cpp  x11info.cpp
3rdlib/httplib/: CMakeLists.txt  httplib.hpp  split.py
example/: CMakeLists.txt
example/include/: timeapi.hpp
example/netbian/: .gitignore  main.cpp
example/src/: cmd_test.cpp  format.cpp  http.cpp  http_test.cpp  http_url.cpp  locale.cpp  path.cpp  path_test.cpp  print.cpp  print_test.cpp  proc.cpp  reco.cpp  regex_search.cpp  shanghai.cpp  time_fetch.cpp  timeapi.cpp  timer.cpp  token_fetch.cpp  translate.cpp  translate_test.cxx  x11_test.cc  zlib_test.cpp
example/time/: timeapi.cpp
example/tunet/: localhost.cpp  localhost.hpp  main.cpp  md5.cpp  md5.hpp  portal.cpp  portal.h  test.cpp
neocore/: CMakeLists.txt  README.md
neocore/include/: httplib.h  neotimer.h  systemapi.h
neocore/src/: httplib.cpp
network/: CMakeLists.txt  README.md  xmake.lua
network/include/: httplib.h
network/src/: httplib.cpp
pluginmgr/: CMakeLists.txt  README.md  makeqrc.py
pluginmgr/desktop/: Neobox.desktop  neobox.desktop
pluginmgr/include/: config.h  editorbase.hpp  glbobject.h  httplib.h  httpproxy.h  listeditor.h  menubase.hpp  neoapp.h  neoconfig.h  neomenu.hpp  neomsgdlg.hpp  neosystemtray.hpp  neotimer.h  plugincenter.h  pluginevent.h  pluginexport.cpp  pluginitem.h  pluginmgr.h  pluginobject.h  shortcut.h  switchbutton.hpp  systemapi.h  update.hpp  widgetbase.hpp
pluginmgr/src/: config.h.in  httplib.cpp  httpproxy.cpp  install.cc  menubase.cpp  neotimer.cpp  plugincenter.cpp  pluginitem.cpp  pluginmgr.cpp  pluginobject.cpp  process.cpp  shortcut.cpp  systemapi.cpp  unicode.cpp  uninstall.cc  update.cc  update.cpp  widgetbase.cpp
pluginmgr/styles/: AppStyle.css  AppStyle.qss  ScrollbarNarrow.qss  ScrollbarWide.qss
pluginmgr/widgets/: downloadingdlg.cpp  downloadingdlg.hpp  glbobject.cpp  itembase.cpp  itembase.hpp  itemnative.cpp  itemnative.hpp  itemonline.cpp  itemonline.hpp  listeditor.cpp  menubase.cpp  neoapp.cpp  neomenu.cpp  neomsgdlg.cpp  neosystemtray.cpp  plugincenter.cpp  plugincenter.hpp  switchbutton.cpp  switchbutton.hpp  tabhotkey.cpp  tabhotkey.hpp  tabhotkey.ui  tabnative.cpp  tabnative.hpp  tabnetproxy.cpp  tabnetproxy.hpp  tabnetproxy.ui  tabonline.cpp  tabonline.hpp  tabversion.cpp  tabversion.hpp  versiondlg.cpp  widgetbase.cpp
plugins/: CMakeLists.txt  README.md  release.py
plugins/neocolorplg/: CMakeLists.txt
plugins/neohotkeyplg_qt/: CMakeLists.txt
plugins/neoocr_core/: CMakeLists.txt
plugins/neoocr_qt/: CMakeLists.txt
plugins/neoocrplg/: CMakeLists.txt
plugins/neospeedbox_core/: CMakeLists.txt
plugins/neospeedbox_qt/: CMakeLists.txt
plugins/neospeedboxplg/: CMakeLists.txt
plugins/neosystem_qt/: CMakeLists.txt
plugins/neosystemplg/: CMakeLists.txt
plugins/neotranslate_core/: .gitignore  CMakeLists.txt  README.md
plugins/neotranslate_qt/: CMakeLists.txt
plugins/neotranslateplg/: CMakeLists.txt
plugins/neousbplg/: CMakeLists.txt
plugins/neousbplg_qt/: CMakeLists.txt
plugins/neowallpaper_core/: CMakeLists.txt
plugins/neowallpaper_qt/: CMakeLists.txt
plugins/neowallpaperplg/: CMakeLists.txt
plugins/weather/: CMakeLists.txt
src/: CMakeList.txt  CMakeLists.txt  CMakeLists_gen.txt  FormulaPaser.h  SpeedBox.pro  SpeedBox.pro.autosave  SpeedBox.pro.user.54095c8  SpeedBox.pro.user.6605b19  SpeedBox.pro.user.f901c56  SpeedBox2.pro  SppedBox.pri  YEncode.h  YJson.cpp  YJson.h  YString.cpp  YString.h  aboutauthor.cpp  aboutauthor.h  aboutnew.cpp  aboutnew.cpp.autosave  aboutnew.h  app_win32.rc  bing_setting.ui  bing_style.qss  bingsetting.cpp  bingsetting.h  blankform.cpp  blankform.h  calculator.cpp  calculator.h  calculator.ui  desktopclock.cpp  desktopclock.h  desktopmask.cpp  desktopmask.h  dialog.cpp  dialog.h  dialog.ui  dialogwallpaper.cpp  dialogwallpaper.h  (+50 more)
src/3rd_qxtglobalshortcut/: CMakeLists.txt
src/bueatray/: bueatray.cpp
src/cmake/: Mycmake.txt  pro2cmake.py  qmake_parser.py
src/icons/: FormulaPaser.h  SpeedBox.pro  YJson.cpp  YJson.h  bingsetting.cpp  bingsetting.h  bingsetting.ui  blankform.h  calculator.cpp  calculator.h  desktopmask.cpp  dialog.cpp  dialog.h  downloadprogress.h  downloadprogress.ui  form.h  formsetting.cpp  formsetting.h  formsetting.ui  funcbox.cpp  funcbox.h  main.cpp  menu.cpp  res.qrc  speedwidget.h  translater.cpp  tray.cpp  wallpaper.cpp  wallpaper.h
src/json/: BoxFont.json  Directory.json  Directory_x64.json  Directory_x86.json  WallpaperApi.json
src/main/: dialog.cpp  dialog.ui  dialog.ui.autosave  dialogwallpaper.cpp  form.cpp  form.ui  funcbox.cpp  main.cpp  main.pro  menu.cpp  menuwallpaper.cpp  res.qrc  translater.cpp  translater.ui  wallpaper.cpp
src/md5/: md5.cpp
src/qss/: bing_style.qss  calculater.qss  dialog_style.qss  menu_style.qss  translater_style.qss
src/reg_plugin/: main.cpp  main.rc  reg_plugin.pro  uac.manifest
src/scripts/: SetWallpaper.sh  SpeedBox.desktop
src/ui/: aboutauthor.ui  bingsetting.ui  calculator.ui  dialog.ui  downloadprogress.ui  translater.ui  usbdrivehelper.ui
tests/: CMakeLists.txt  main  test.cpp  xmake.lua
tests/src/: format.cpp  http.cpp  main.cpp  test.cpp  (+2 more)
translate/: CMakeLists.txt  text.cpp  text.h  translater.cpp  translater.h  xmake.lua
update/: CMakeLists.txt  Speed_Box_Updater.py  newinfo.json  update.cpp  update.json  yjson.cpp  ystring.h
widgets/: CMakeLists.txt  README.md  logo.rc  makeqrc.py  pathdialog.h  resources.qrc  screenfetch.cpp  screenfetch.h  speedapp.cpp  speedapp.h  speedbox.cpp  speedbox.h  speedmenu.cpp  speedmenu.h  xmake.lua
(+470 files in other folders)
